# design/design.go
@@ -8,10 +8,15 @@ import (
 var _ = API("Sparrow API", func() {
 	Title("Sparrow API")
 	Description("Sparrow API")
-	Host("localhost")
+	Host("webapitester.com")
 	Scheme("http")
+	BasePath("/api")
+
 	Consumes("application/json")
-	Origin("*", func() { Methods("GET,POST,PUT,DELETE") })
+	Produces("application/json")
+
+	Origin("*", func() { Methods("GET,POST,PUT,DELETE,OPTIONS") })
+
 	ResponseTemplate(Created, func(pattern string) {
 		Description("Resource created")
 		Status(201)
@@ -23,10 +28,20 @@ var _ = API("Sparrow API", func() {
 	})
 })
 
-var _ = Resource("health", func() {
+var _ = Resource("meta", func() {
 	Action("alive", func() {
-		Routing(GET("/alive"))
-		Description("Perform health check.")
+		Routing(GET("/health/alive"))
+		Description("Perform aliveness check.")
+		Response(OK, "text/plain")
+	})
+	Action("ready", func() {
+		Routing(GET("/health/ready"))
+		Description("Perform readiness check.")
+		Response(OK, "text/plain")
+	})
+	Action("root", func() {
+		Routing(GET("/"))
+		Description("Perform root check.")
 		Response(OK, "text/plain")
 	})
 })
